--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "humandevice/deployer",
+    "name": "positivecodes/deployer",
     "description": "GIT/SVN deployer for Yii 2 apps.",
     "type": "script",
     "license": "MIT",
